<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SuccessActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_payment_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_successful"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="@dimen/text_xlarge"
        android:textColor="@color/lightBlue"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_successful"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:contentDescription="@string/payment_successful_icon" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/continue_prompt"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>