<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailsActivity">

    <ImageView
        android:id="@+id/iv_movie_details_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:src="@drawable/split"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/iv_movie_details_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_movie_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text="Movie Name here" />

        <TextView
            android:id="@+id/tv_movie_details_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/white"
            tools:text="@string/lorem" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_buy_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/buy_ticket"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"/>



</androidx.constraintlayout.widget.ConstraintLayout>