<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"/>

    <TextView
        android:id="@+id/tv_now_playing_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="@dimen/text_semi_large"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_now_playing_label"
        android:layout_marginTop="@dimen/margin_normal"
        tools:listitem="@layout/movie_list"/>

    <TextView
        android:id="@+id/tv_upcoming_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_now_playing"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/upcoming"
        android:textColor="@color/white"
        android:textSize="@dimen/text_semi_large"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_label"
        android:layout_marginTop="@dimen/margin_normal"
        tools:listitem="@layout/movie_list"/>


</androidx.constraintlayout.widget.ConstraintLayout>